kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_9.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 67
expression: "crate::tests::parsing_expr_string(\"{*a, **b}\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Binary(
                                    BinaryExpr {
                                        left: Node {
                                            node: Missing(
                                                MissingExpr,
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 0,
                                            end_line: 1,
                                            end_column: 2,
                                        },
                                        op: Bin(
                                            Mul,
                                        ),
                                        right: Node {
                                            node: Identifier(
                                                Identifier {
                                                    names: [
                                                        "a",
                                                    ],
                                                    pos: [
                                                        Node {
                                                            node: (),
                                                            filename: "",
                                                            line: 1,
                                                            column: 2,
                                                            end_line: 1,
                                                            end_column: 3,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 2,
                                            end_line: 1,
                                            end_column: 3,
                                        },
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 3,
                            },
                        ),
                        value: Node {
                            node: Binary(
                                BinaryExpr {
                                    left: Node {
                                        node: Missing(
                                            MissingExpr,
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 3,
                                        end_line: 1,
                                        end_column: 7,
                                    },
                                    op: Bin(
                                        Pow,
                                    ),
                                    right: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    "b",
                                                ],
                                                pos: [
                                                    Node {
                                                        node: (),
                                                        filename: "",
                                                        line: 1,
                                                        column: 7,
                                                        end_line: 1,
                                                        end_column: 8,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 7,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 8,
                        },
                        operation: Override,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 8,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}

